# warpflow

./: README.md  auth.py  database.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: config.py  database.py  models.py  schemas.py  security.py
app/auth/: oauth.py  router.py  utils.py
app/google_docs/: credentials_router.py  router.py  schemas.py
app/services/: credentials_router.py  secrets_router.py
app/services/agent/: engine.py  router.py  schemas.py  tools.py
app/services/ai/gemini_service/: router.py  schemas.py
app/services/ai/openai_service/: router.py  schemas.py
app/services/google/: common.py
app/services/google/gmail/: router.py  schemas.py
app/services/google/google_docs/: credentials_router.py  router.py  schemas.py
app/services/google/google_drive/: router.py  schemas.py
app/services/google/google_forms/: router.py  schemas.py
app/workflows/: router.py  schemas.py  seed.py
src/: App.tsx  index.css
src/components/: ExecuteModal.tsx  NodeConfigModal.tsx  ProtectedRoute.tsx
src/components/auth/: AuthLayout.tsx  GoogleCallback.tsx  LoginForm.tsx  SignupForm.tsx
src/components/nodes/: AIAgentConfig.tsx  GeminiConfig.tsx  GmailConfig.tsx  GoogleDocsConfig.tsx  GoogleDriveConfig.tsx  GoogleFormsConfig.tsx  GoogleSheetsConfig.tsx  OpenAIConfig.tsx
src/components/ui/: Button.tsx  Input.tsx  Label.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  secrets.ts
src/pages/: AuthPage.tsx  Login.tsx  Signup.tsx  WorkFlowBuilder.tsx
tests/: test_api.py  test_frontend.sh
(+2 files in other folders)
